SHIRO #1585 - builds and all but 13 integration tests pass. Failures seem to center around test harness construction (marked with @Disabled )